# FM

./: Cargo.toml  README.md  readme.md
crates/plugin/: Cargo.toml
crates/plugin/src/: blocks.rs  editor.rs  envelope.rs  event.rs  lib.rs  note_event_block_iter.rs  note_event_sample_iter.rs  params.rs
crates/plugin/src/iter/: blocks.rs  mod.rs
src/: envelope.rs  lib.rs  oscillator.rs  params.rs  utility.rs  voices.rs  zero_to_one_float_32.rs
xtask/: Cargo.toml
