[package]
name = "fm"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["xtask"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies.nih_plug]
git = "https://github.com/robbert-vdh/nih-plug.git"
branch = "master"
features = ["assert_process_allocs"]
