[package]
name = "fm"
version = "0.1.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
# # Uncomment when upstream closes this: https://github.com/robbert-vdh/nih-plug/pull/97
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = [
#     "assert_process_allocs",
#     "vst3",
# ] }
# nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }

nih_plug = { git = "https://github.com/waynevanson/nih-plug.git", branch = "fix/iced-baseview-version", features = [
    "assert_process_allocs",
    "vst3",
] }
nih_plug_iced = { git = "https://github.com/waynevanson/nih-plug.git", branch = "fix/iced-baseview-version" }

rand = "0.8.5"
rand_pcg = "0.3.1"
