[package]
name = "fm"
version = "0.1.0"
edition = "2021"
authors = ["Wayne Van Son <waynevanson@gmail.com>"]
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", branch = "vizia-update", features = [
    "assert_process_allocs",
    "vst3",
] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git", branch = "vizia-update" }

rand = "0.8.5"
rand_pcg = "0.3.1"
